# PluginLoader

./: CMakeLists.txt  LICENSE  README.md
plugins/: CMakeLists.txt  Console.cpp  Console.h  Exceptions.hpp  MetaObject.cpp  MetaObject.hpp  MultiLibraryPluginLoader.cpp  MultiLibraryPluginLoader.hpp  PluginLoader.cpp  PluginLoader.hpp  PluginLoaderCore.cpp  PluginLoaderCore.hpp  PluginMacro.hpp  SharedLibrary.cpp  SharedLibrary.hpp  VisibilityControl.h
test/: plugins1.cpp  utest.cpp
testGoogle/: CMakeLists.txt  plugins2.cpp  shared_ptr_test.cpp  unique_ptr_test.cpp  utest.cpp
testMathFunctions/: CMakeLists.txt  base.hpp  plugins.cpp  utest.cpp
testSimple/: CMakeLists.txt  plugins.cpp  plugins.h  utest.cpp
